--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,11 +1,12 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipes-list (recipeWasSelected)="selectRecipe = $event"></app-recipes-list>
+    <app-recipes-list></app-recipes-list>
   </div>
   <div class="col-md-7">
-    <app-recipes-detail *ngIf="selectRecipe; else infoText" [recipe]="selectRecipe"></app-recipes-detail>
+    <router-outlet></router-outlet>
+    <!-- <app-recipes-detail *ngIf="selectRecipe; else infoText" [recipe]="selectRecipe"></app-recipes-detail>
         <ng-template #infoText>
           <p> Please select a Recipe! </p>
-        </ng-template>
+        </ng-template> -->
   </div>
 </div>
